<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:padding="15dp"
    android:background="#00BFBF"
    android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loginhead"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:fontFamily="@font/abel"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loginhead1"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:fontFamily="@font/abel"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logindesc"
        android:textSize="15dp"
        android:textColor="@color/black"
        android:fontFamily="@font/abel"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/log_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="Email"
            android:autofillHints="Email"
            android:background="@color/white"
            android:textColorHint="@color/black"
            app:startIconDrawable="@drawable/profile"
            app:startIconTint="@color/black">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/log_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="Password"
            android:autofillHints="Password"
            android:background="@color/white"
            android:textColorHint="@color/black"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/locked_padlock"
            app:startIconTint="@color/black">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/loginbtn"
        android:onClick="login"
        android:text="Login"
        android:textColor="@color/white"
        android:backgroundTint="@color/Orange"
        android:layout_marginHorizontal="110dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_margin="10dp"
        android:layout_marginHorizontal="10dp"
        android:textAlignment="center"
        android:text="@string/Underline1"
        android:textSize="17dp"
        android:onClick="Forget"
        android:textColorHint="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="182dp"
            android:layout_marginEnd="19dp"
            android:layout_marginBottom="1dp"
            android:text="@string/noacc"
            android:textColorHint="@color/black"
            android:textSize="17dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginStart="9dp"
            android:layout_marginTop="183dp"
            android:layout_marginRight="126dp"
            android:onClick="Register"
            android:text="@string/Underline"
            android:textColorHint="@color/black"
            android:textSize="17dp" />

    </LinearLayout>
</LinearLayout>
</RelativeLayout>
